Fix mobile spacing

--- a/style.scss
+++ b/style.scss
@@ -435,6 +435,7 @@ p {
 
 	h2 {
 		text-align: center;
+		margin-bottom: 20px;
 	}
 
 	p {
